[package]
name = "straw-boss"
version = "0.1.0"
authors = ["Eric Rochester <eric.rochester@willowtreeapps.com>"]

[dependencies]
clap = "2.30.0"
daemonize = "0.3.0"
duct = "0.11.0"
failure = "0.1.1"
failure_derive = "0.1.1"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_yaml = "0.7.3"
sysinfo = "0.5.1"
shellwords = "0.1.0"

[dev-dependencies]
assert_cmd = "0.6.0"
reqwest = "0.8.5"
spectral = "0.6.0"
