[package]
name = "straw-boss"
version = "0.1.0"
authors = ["Eric Rochester <eric.rochester@willowtreeapps.com>"]

[dependencies]
chrono = "0.4.6"
clap = "3.1.18"
daemonize = "0.4.1"
duct = "0.13.5"
failure = "0.1.1"
failure_derive = "0.1.1"
rmp-serde = "1.1.0"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_yaml = "0.8.24"
sysinfo = "0.23.12"
shellwords = "1.1.0"

[dev-dependencies]
assert_cmd = "2.0.4"
assert_fs = "1.0.7"
predicates = "2.1.1"
reqwest = "0.11.10"
spectral = "0.6.0"
